fix input overflowing container

--- a/src/components/ui/subscribeSection/subscribeSection.scss
+++ b/src/components/ui/subscribeSection/subscribeSection.scss
@@ -40,6 +40,10 @@
     width: 100%;
   }
 
+  input[name="bdaySurprise"] {
+    width: auto;
+  }
+
   .formBlock {
     width: 90%;
     margin: 0 auto 1.5em;
